# poe2openai

./: Cargo.toml  Dockerfile  LICENSE  README.md
poe2openai/: .gitignore  Cargo.toml  Dockerfile
poe2openai/src/: poe_client.rs  types.rs  utils.rs
poe2openai/src/handlers/: admin.rs  chat.rs  mod.rs
poe2openai/templates/: admin.html
poe_api_process/: Cargo.toml  README.md  upload.txt
poe_api_process/src/: client.rs  error.rs  lib.rs  types.rs
src/: main.rs  poe_client.rs  types.rs
src/handlers/: chat.rs  mod.rs  models.rs
static/: all.min.css
templates/: admin.html
