[package]
name = "poe2openai"
version = "0.1.2"
edition = "2021"
publish = ["crates-io"]
authors = ["Jerome Leong <jeromeleong1998@gmail.com>"]
description = "Poe API to OpenAI API"
repository = "https://github.com/jeromeleong/poe2openai"
license = "MIT"
keywords = ["poeapi", "openai","ai"]

[dependencies]
poe_api_process = "0.1.3"
tokio = { version = "1.41.0", features = ["full"] }
futures-util = "0.3"
salvo = "0.73.0"
serde = "1.0.213"
serde_json = "1.0.132"
chrono = "0.4.38"
nanoid = "0.4.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
