[package]
name = "poe_api_process"
version = "0.1.4"
edition = "2021"
publish = ["crates-io"]
authors = ["Jerome Leong <jeromeleong1998@gmail.com>"]
description = "Poe API for rust"
repository = "https://github.com/jeromeleong/poe_api_process"
license = "MIT"
keywords = ["poeapi", "ai"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
futures-util = "0.3.31"
async-trait = "0.1.83"
thiserror = "1.0.65"
bytes = "1.8.0"
